// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="root rootFieldLayoutVertical  "
>
  <ContextProvider
    value={
      Object {
        "inFormLayout": true,
        "layout": "vertical",
      }
    }
  >
    <ForwardRef(withForwardedRef(WithProviderContextComponent))
      id="test-id"
      label="Text field"
    />
  </ContextProvider>
</div>
`;

exports[`rendering renders correctly with auto label width 1`] = `
<div
  className="root rootFieldLayoutHorizontal  hasRootLabelWidthAuto"
  id="test-id"
>
  <ContextProvider
    value={
      Object {
        "inFormLayout": true,
        "layout": "horizontal",
      }
    }
  >
    <ForwardRef(withForwardedRef(WithProviderContextComponent))
      id="test-id"
      label="Text field"
    />
  </ContextProvider>
</div>
`;

exports[`rendering renders correctly with custom label width 1`] = `
<div
  className="root rootFieldLayoutHorizontal  hasRootLabelWidthCustom"
  id="test-id"
  style={
    Object {
      "--rui-custom-label-width": "300px",
    }
  }
>
  <ContextProvider
    value={
      Object {
        "inFormLayout": true,
        "layout": "horizontal",
      }
    }
  >
    <ForwardRef(withForwardedRef(WithProviderContextComponent))
      id="test-id"
      label="Text field"
    />
  </ContextProvider>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="root rootFieldLayoutVertical  "
>
  <ContextProvider
    value={
      Object {
        "inFormLayout": true,
        "layout": "vertical",
      }
    }
  >
    <ForwardRef(withForwardedRef(WithProviderContextComponent))
      id="test-id-1"
      label="Text field 1"
    />
    <ForwardRef(withForwardedRef(WithProviderContextComponent))
      id="test-id-2"
      label="Text field 2"
    />
    <ForwardRef(withForwardedRef(WithProviderContextComponent))
      id="test-id-3"
      label="Text field 3"
    />
  </ContextProvider>
</div>
`;
